formFieldPath can be null